Tweak the heading just a little bit...

--- a/index.html.in
+++ b/index.html.in
@@ -1,4 +1,4 @@
-	<h1>The 2013 workshop and ball are coming up!</h1>
+	<h1>The 11th workshop and ball are coming up!</h1>
 
 	<p>The next Youth Weekend West will be <strong>May 3-5, 2013</strong>
 in Vancouver, Wash.  Please stay tuned for more details as they come
