--- a/index.html.in
+++ b/index.html.in
@@ -2,4 +2,5 @@
 
 	<p>The next Youth Weekend West will be <strong>May 3-5, 2013</strong>
 in Vancouver, Wash.  Please stay tuned for more details as they come
-available.</p>
+available.  Like us on <a
+href="http://www.facebook.com/events/479641348754864/">Facebook</a>!</p>
