--- a/ball.html.in
+++ b/ball.html.in
@@ -1,41 +1,48 @@
 	<h1>Ball</h1>
-	<img src="images/allemande.png" width="400" height="293" alt="Image of dancers" class="floatright">
 
-	<p>The Youth Weekend West ball will be held on Saturday, May 5th at the
-Washington Dance Club in downtown Seattle. We invite dancers of all ages to
-attend. Join us for hors d'oeuvres 7:00 pm. The Grand March begins at 7:30 pm.
-<a href="ball-program.pdf">Dance notes</a> are avalailable for the Ball
-program. You may also <a
-href="http://danciemaetion.imaginationprocessing.com/YWW12.htm"
-target="new">watch animations</a> of these dances.</p>
+	<p>Youth Weekend West participants are invited to join the RSCDS
+Southwest Washington State Branch's annual dinner dance.  Taking place on
+Saturday, May 4th at St. Luke's Episcopal Church, this year's theme is "Dancing
+with the Stars."  There will be a catered dinner at 6:00pm and the Grand March
+will be at 7:15pm.</p>
 
-	<h2>Location</h2>
-	<p><a href="http://www.washingtondance.com/" target="new">Washington Dance Club</a><br>
-	1017 Stewart Street<br>
-	Seattle, WA</p>
+	<h2>Musicians:</h2>
+	<p>Lisa Scott, Leslie Hirsch and Linda Danielson</p>
 
-	<p>Washington Dance Club is located just two blocks west of I-5 on the
-corner of Stewart and Boren Streets near the Convention Center. Parking on the
-street is free after 8:00 p.m. There is a parking lot directly across the
-street that charges $5 in the evening, and many other pay lots in the area.
-</p>
-
-	<h2>Program</h2>
+	<h2>Program:</h2>
 	<div class="program">
-		<p>Wild Geese<br>
-		MacDonald of the Isles<br>
-		Miss Johnstone of Ardrosson<br>
-		Pelorus Jack<br>
-		Delvine Side<br>
-		Major Ian Stewart<br>
-		The Minister on the Loch<br>
-		Shiftin' Bobbins</p>
-		<p><em>Intermission</em></p>
-		<p>Swashbuckling Iain<br>
-		Monymusk<br>
-		Hamilton Rant<br>
-		John McAlpin<br>
-		Sleepy Maggie<br>
-		Rothesay Rant<br>
-		Flowers of Edinburgh<br><br></p>
-	</div>
+<table>
+<tr><td>Machine Without Horses</td>	<td>RSCDS Bk 12.12</td></tr>
+<tr><td>Bridge of Nairn</td>		<td>RSCDS Bk 13.11</td></tr>
+<tr><td>Dashing White Sergeant</td>	<td>RSCDS Bk 3.2</td></tr>
+<tr><td>A Trip to the Drakensberg</td>	<td>RSCDS Bk 38.8</td></tr>
+<tr><td>Balquidder Strathspey</td>	<td>RSCDS Bk 24.2</td></tr>
+<tr><td>The Teddy Bears' Picnic</td>	<td>(adapted)</td></tr>
+<tr><td>Barley Bree</td>		<td>RSCDS Bk 8.4</td></tr>
+<tr><td>Silver Tassie</td>		<td>RSCDS Leaflet</td></tr>
+<tr><td>Round Reel of Eight</td>	<td>RSCDS Bk  27.7</td></tr>
+<tr><td>Bramble Bush</td>		<td>RSCDS Bk  25.3</td></tr>
+<tr><td>Miss Milligan's S'spey</td>	<td>RSCDS Leaflet</td></tr>
+<tr><td>Catch the Wind</td>		<td>The Island Bay Collection. RSCDS Bk.45.5</td></tr>
+<tr><td>Well Done Jack</td>		<td>RSCDS Bk  29.3</td></tr>
+<tr><td>Delvine Side</td>		<td>RSCDS Bk 2.9</td></tr>
+<tr><td>De'il Amang the Tailors</td>	<td>RSCDS  Bk 14.7</td></tr>
+
+<tr><td colspan="2">Highland (Pride of Erin) Waltz</td></tr>
+</table>
+
+	<h2>Directions:</h2>
+	<p>The ball will be at St. Luke's Episcopal Church, 426 E. Fourth Plain Blvd., Vancouver, Wash:
+<iframe class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;aq=1&amp;oq=St.+Luke's+Episcop&amp;sll=45.543408,-122.654422&amp;sspn=0.267383,0.490952&amp;ie=UTF8&amp;hq=St.+Luke's+Episcopal+Church,&amp;hnear=E+4th+Plain+Blvd,+Vancouver,+Washington&amp;ll=45.640216,-122.667212&amp;spn=0.033363,0.061369&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=5976076169227846668&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;aq=1&amp;oq=St.+Luke's+Episcop&amp;sll=45.543408,-122.654422&amp;sspn=0.267383,0.490952&amp;ie=UTF8&amp;hq=St.+Luke's+Episcopal+Church,&amp;hnear=E+4th+Plain+Blvd,+Vancouver,+Washington&amp;ll=45.640216,-122.667212&amp;spn=0.033363,0.061369&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=5976076169227846668" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
+
+	<p>St. Luke's is west of Interstate 5 on E. Fourth Plain Boulevard,
+just 1.3 miles north of the Columbia River. The parking lot is reached from
+Fourth Plain Boulevard by driving north on "F" Street and then driving west on
+East 27th Street. The lot is posted. There is no parking on Fourth Plain.</p>
+
+	<p><b>I-5 Southbound Directions:</b> Take exit 1D, keeping right onto
+Fourth Plain Blvd Westbound.  At the first light, turn left onto "F" Street,
+then turn left at the first intersection onto 27th Street.  The parking lot is
+straight ahead.</p>
+
+	<p><b>I-5 Northbound Directions:</b> Take exit 1C/1D keeping left and follow the signs to Fourth Plain Blvd.  Turn left onto Fourth Plain Blvd. Westbound.  At the second light, turn right onto “F” Street, and turn left at the first intersection onto 27th Street.  The parking lot is straight ahead.</p>
