Fill in bits and pieces of other details.

--- a/classes.html.in
+++ b/classes.html.in
@@ -1,5 +1,21 @@
 	<h1>Classes</h1>
 
+	<p>Please check back later for more information about the classes that
+we will offer for Youth Weekend West.</p>
+
+	<h2>Locations:</h2>
+	<p>This year's Youth Weekend West classes will be held in three venues:
+<iframe class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=d&amp;source=embed&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+
+	<ol type="A">
+	<li>St. Luke's Episcopal Church, 426 E. Fourth Plain Blvd., Vancouver, Wash.</li>
+	<li>The Leslie B. Durst Columbia Dance Center, 1700 Broadway, Vancouver, Wash.</li>
+	<li>The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash.</li>
+	</ol>
+	</p>
+
+<!--
+
 	<img src="images/center_house.jpg" width="250" height="231" alt="Seattle Center House" class="floatright">
 	<p>Classes and electives will be held in the Theatre Puget Sound rehearsal rooms on the fourth floor of the Seattle Center House. </p>
 
@@ -14,8 +30,12 @@
 	<p><strong>Intermediate:</strong> Dancers are comfortable with basic formations (e.g., hands across, reels of three or four, allemande) and some intermediate and advanced formations (e.g., poussettes, double triangles, knot). Can dance a new dance after one or two walk-throughs.</p>
 
 	<p><strong>Advanced:</strong> Dancers are comfortable with most advanced formations and show excellent phrasing, handing, and covering. Can do a new dance with only a talk-through.</p>
+-->
 
 	<h2>Electives</h2>
-	<p>Cape Breton Step Dancing</p>
-	<p>Hambo, A Traditional Scandinavian Dance</p>
-	<p>Tricky (Almost Impossibly Hard) Scottish Country Dances</p>
+	<p>There will be two elective classes that you can choose from:
+	<ul>
+	<li><a href="http://www.youtube.com/watch?v=MZfqTbwwKHw">Thriller Zombie Dance</a></li>
+	<li><a href="http://www.youtube.com/watch?v=jO5NTRWlFe4">Norman Folk Dancing</a></li>
+	</ul>
+	</p>
