--- a/schedule.html.in
+++ b/schedule.html.in
@@ -1,5 +1,10 @@
 	<h1>Schedule of Events</h1>
 
+	<p><b>Tentative Schedule:</b> There will be a ceildh on Friday night,
+classes during the day on Saturday, a ball Saturday evening, and a final class
+on Sunday.  Please check back for more details as Youth Weekend West comes
+closer.</p>
+<!--
 	<img src="images/bow.png" width="400" height="293" alt="Bow and curtsy" class="floatright">
 
 	<p>Youth Weekend West presents a variegated and entertaining schedule
@@ -68,3 +73,4 @@ knot). Can dance a new dance after one or two walk-throughs.</p>
 	<p><strong>Advanced:</strong> Dancers are comfortable with most
 advanced formations and show excellent phrasing, handing, and covering. Can do
 a new dance with only a talk-through.</p>
+-->
