--- a/staff.html.in
+++ b/staff.html.in
@@ -1,48 +1,70 @@
 	<h1>Teachers</h1>
-	<br>
+
 	<h2>Linda Mae Dennis</h2>
-	<table>
-	<tr class="biography"><td><img src="images/lindamae.jpg" width="181" height="219" alt="Linda Mae Dennis" class="floatleft"><img src="images/lindy.jpg" width="100" height="300" alt="Linda Mae Dennis age 3" class="floatright"><p>Linda Mae Dennis was born and raised in Alberta, Canada, where she first ventured into Tap at age five, and Irish dancing at age seven. After family moves to Southern California and then Houston, Texas, (where she got a largely unused degree in Biology) she started her adult life in Austin, Texas. By taking every dance class she could find, and after a short stint at Motorola, she became a professional Tap dancer in 1983, and toured with Austin on Tap Dance Theater for several years.</p>
 
-	<p>When she retired from touring, she continued to Tap with the "in town" company, as well as teach ballet, tap, jazz, and gymnastics to children, as well as taking up Irish Dancing, which included hard shoe dancing. And somehow she morphed from a middle manager to a graphic artist. </p>
+	<p><img src="images/lindamae.jpg" width="181" height="219" alt="Linda
+Mae Dennis" class="floatleft"><img src="images/lindy.jpg" width="100"
+height="300" alt="Linda Mae Dennis age 3" class="floatright">Linda Mae Dennis
+was born and raised in Alberta, Canada, where she first ventured into Tap at
+age five, and Irish Dancing at age seven. After family moves to Southern
+California and then Houston, Texas, (where she got a largely unused degree in
+Biology) she started her adult life in Austin, Texas. By taking every dance
+class she could find, and after a short stint at Motorola, she became a
+professional Tap dancer in 1983, and toured with Austin on Tap Dance Theater
+for several years.</p>
 
-	<p>In 1996, a friend invited her to a Scottish Country Dance class. She watched the class and enjoyed the music, and went back the next week, and the next, and the next. After partaking liberally of the vibrant Scottish Country Dance Culture in Texas, attending lots of workshops and dances and starting a Tap class for Scottish Country Dancers, she had to get out of the heat and moved with her husband, Patrick, to the Pacific Northwest.</p>
+	<p>When she retired from touring, she continued to Tap with the "in
+town" company, as well as to teach ballet, tap, jazz, and gymnastics to
+children, as well as taking up Irish Dancing, which included hard shoe dancing.
+And somehow she morphed from a middle manager to a graphic artist. </p>
 
-	<p>She attended her first TAC Summer School in 2003, where she got the teaching bug. After a lot of hard (but supremely fun) work, she received her Prelim in 2005, and her Full Certificate in 2007. In the meantime, she took some Cape Breton Dance lessons, and started a "Celtic Tap" class in Vancouver, WA. (“Celtic Tap” is an amalgamation of Cape Breton, Scottish and Irish Step Dancing, and American Tap, all done to Celtic music.) She also learned to be a Flourishing Tenor Drummer, and plays regularly with Fort Vancouver Pipe Band, Kells Pipes and Drums, and the Skamania Pipes and Drums.</p>
+	<p>In 1996, a friend invited her to a Scottish Country Dance class. She
+watched the class and enjoyed the music, and went back the next week, and the
+next, and the next. After partaking liberally of the vibrant Scottish Country
+Dance Culture in Texas, attending lots of workshops and dances and starting a
+Tap class for Scottish Country Dancers, she had to get out of the heat and
+moved with her husband, Patrick, to the Pacific Northwest.</p>
 
-	<p>She teaches Scottish Country Dancing in Portland, OR, and in Stevenson and Vancouver, WA, and is active in both the Portland and Southwest Washington State Branches of the RSCDS.</p>
-	</td>
-	</tr>
-	</table>
-	<br>
-	<h2>Terry Harvey</h2>
-	<table>
-	<tr class="biography"><td><img src="images/harvey.jpg" width="200" height="206" alt="Terry Harvey" class="floatleft"><p>I started dancing in the Delaware Valley in 1983 while a student at the University of Delaware. I took my Preliminary exam and began teaching in 1987, married Line Farr (met in the certificate class) in 1988, and received my Full in 1993. In 1989 Line and I started a Scottish class at Swarthmore College, which I still teach weekly. I have also taught various other basic, intermediate, and advanced classes in the Delaware Valley where we live.</p>
+	<p>She attended her first TAC Summer School in 2003, where she got the
+teaching bug. After a lot of hard (but supremely fun) work, she received her
+Prelim in 2005, and her Full Certificate in 2007. In the meantime, she took
+some Cape Breton Dance lessons, and started a "Celtic Tap" class in Vancouver,
+WA. (“Celtic Tap” is an amalgamation of Cape Breton, Scottish and Irish Step
+Dancing, and American Tap, all done to Celtic music.) She also learned to be a
+Flourishing Tenor Drummer, and plays regularly with Fort Vancouver Pipe Band,
+Kells Pipes and Drums, and the Skamania Pipes and Drums.</p>
 
-	<p>My dancing philosophy is that the main point of dancing is enjoyment (typically, fun). Of course, enjoyment varies by perspective: one person's enjoyment of executing a leap in bar four of six hands round might be seen as impeding the enjoyment of five who wish to enjoy sublime synchrony. Therefore dancers must agree on general guidelines for the form of the dance to enable enjoyment for all. I endeavor to dance and teach within the guidelines provided by the RSCDS.</p>
+	<p>She has taught workshops in Washington, Oregon, California, Texas,
+and Alberta, Canada, and regularly teaches Scottish Country Dancing in
+Portland, OR, and Stevenson and Vancouver, WA, and is active in both the
+Portland and Southwest Washington State Branches of the RSCDS.</p>
 
-	<p>My philosophy of teaching dance is that teaching technique (including teamwork, phrasing, handing, carriage, sociability, and footwork) is the way to ensure dancers' maximum enjoyment of the dance. Different dancers have different capabilities, but all of us can reach to become better dancers. Improvement leads inevitably to increased enjoyment on the dance floor.</p>
+	<h2>Lea Maiolo</h2>
+	<p>Lea Maiolo started Scottish Country Dancing at the age of 13 when
+her dad spotted an ad in a newspaper and thought that folk dancing would be
+something she would enjoy. She had done ballet and tap as a child, and had
+continued to try that on and off through the years, but Lea was immediately
+taken with Scottish. She started in David Brandon's class in South Pasadena.
+Lea and her dad soon branched out to several classes a week, later including
+highland class with Fred DeMarse. Lea joined the Los Angeles Branch
+demonstration team a year or two after she started dancing, and began teaching
+the Eagle Rock class of the San Gabriel Valley Branch occasionally a year or
+two after that. She got her preliminary teachers' certificate under Mary
+Brandon's tutelage in 2002.</p>
 
-	<p>Furthermore, it is my goal to present all these aspects of technique in ways that are fun, exciting, and challenging for as many people and in as many ways as possible.</p>
-	</td>
-	</tr>
-	</table>
+	<p>Lea graduated from the Fashion Institute of Design and Merchandising
+in 2003 and began working as a costumer on various commercials, films, and TV
+shows. In 2004 Lea met her now-husband Jim Maiolo, when he moved to LA from
+Pennsylvania, having been dancing at Swarthmore College. She also started
+teaching the Eagle Rock class full time. In 2009 she got her unit 4 and 5
+completed, tutored by Doug MacDonald.</p>
 
-	<br>
-	<h2>Jim Maiolo</h2>
-	<table>
-		<tr class="biography"><td><img src="images/jim.jpg" width="150" height="200" alt="Jim Maiolo" class="floatleft"><p>I started dancing in 2003, just before I graduated from Swarthmore College.  I’m really excited to be teaching at Youth Weekend West because I had the great pleasure of starting to dance as a student.  In fact, I went to my very first dance class mostly out of peer pressure—all of my other friends were always dancing, leaving me all alone on the weekends!  I was in love with Scottish dance from the first moment, however, and I’ve been dancing anywhere from two to five nights a week ever since. </p>
+	<p>When Jim was offered a job at Microsoft, they moved to Washington,
+and Lea now teaches the Redmond class on Sunday nights. She also occasionally
+runs a demo group for a very silly fantasy fair in Bonney Lake. Lea and Jim
+have a one year old daughter named Jasmine.</p>
 
-		<p>After only a year dancing at Swarthmore, I moved to California for grad school at Caltech and continued dancing with the San Gabriel Valley Branch of the RSCDS.  I started teaching in the fall of 2005 so that I could bring Caltech students into Scottish dancing.  Bringing the joy of Scottish dance to young people was what drove me to become a Scottish dance teacher and it has continued to be my passion ever since.  I taught the weekly Caltech class for almost four years, until I moved to the Seattle area.  When I moved away, I was pleased and proud to be able to pass the class on to one of my students.</p>
-
-		<p>I finished my Units 1-3 (what used to be the RSCDS preliminary certificate) in 2009, and I hope to complete my full certificate sometime soon.  I met my wife, Lea, while Scottish dancing (she is also an SCD teacher, and a better one that I), and we are looking forward to the birth of our first child any day now.  Since the organizers asked me to write this bio ridiculously early, our child will probably already be talking by the time you are reading this!</p>
-
-		<p>Finally, I’m extremely happy to be teaching at this workshop with Terry Harvey, who was my very first SCD teacher and the coolest guy around.</p>
-		</td>
-		</tr>
-	</table>
-
-	<p>&nbsp</p>
+<!--
 	<h1>Musicians</h1>
 	<br>
 	<h2>Andy Imbrie</h2>
@@ -67,3 +89,4 @@
 	</td>
 	</tr>
 	</table>
+-->
