Update contact page.

--- a/contact.html.in
+++ b/contact.html.in
@@ -1,4 +1,7 @@
 	<h1>Contact</h1>
-	<p>If you have any questions, comments, or wish to request further information, please contact:</p>
+	<p>If you have any questions, comments, or wish to request further
+information, please contact Kate Mintz:</p>
+	<p><a href="mailto:yww2013 at yahoo dot com">yww2013 at yahoo dot com</a></p>
 
-	<p><a href="mailto:yww2013@yahoo.com">yww2013@yahoo.com</a></p>
+	<p>If you see a problem with the website, contact Darrick Wong:</p>
+	<p><a href="mailto:djwong+yww2013 at djwong dot org">djwong+yww2013 at djwong dot org</a></p>
