--- a/index.html.in
+++ b/index.html.in
@@ -1,6 +1,10 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
-	<p>The next Youth Weekend West will be <strong>May 3-5, 2013</strong>
-in Vancouver, Wash.  Please stay tuned for more details as they come
-available.  Like us on <a
+	<p><b>29 Jan 2013:</b> The ball program has been created, teachers and
+musicians have been selected, venues have been found, and a rudimentary
+schedule have appeared on the website!</p>
+
+	<p><b>29 Nov 2012:</b> The next Youth Weekend West will be <strong>May
+3-5, 2013</strong> in Vancouver, Wash.  Please stay tuned for more details as
+they come available.  Like us on <a
 href="http://www.facebook.com/events/479641348754864/">Facebook</a>!</p>
