Fix (some) of the XHTML1.1 errors.

--- a/staff.html.in
+++ b/staff.html.in
@@ -3,8 +3,8 @@
 	<h2>Linda Mae Dennis</h2>
 
 	<p><img src="images/lindamae.jpg" width="181" height="219" alt="Linda
-Mae Dennis" class="floatleft"><img src="images/lindy.jpg" width="100"
-height="300" alt="Linda Mae Dennis age 3" class="floatright">Linda Mae Dennis
+Mae Dennis" class="floatleft"/><img src="images/lindy.jpg" width="100"
+height="300" alt="Linda Mae Dennis age 3" class="floatright"/>Linda Mae Dennis
 was born and raised in Alberta, Canada, where she first ventured into Tap at
 age five, and Irish Dancing at age seven. After family moves to Southern
 California and then Houston, Texas, (where she got a largely unused degree in
