--- a/history.html.in
+++ b/history.html.in
@@ -8,7 +8,7 @@ culminates in an elaborate ball for dancers to show off what they've learned,
 and to interact with dancers from other branches.</p>
 
 	<p>Pictures from the 2012 workshop are at the <a
-href="http://www.facebook.com/media/set/?set=a.379509592090678.79791.127431310631842&type=1">RSCDS
+href="http://www.facebook.com/media/set/?set=a.379509592090678.79791.127431310631842&amp;type=1">RSCDS
 Seattle Facebook page</a>.  Several participants have inquired about some of
 the dances taught during the workshop.  Here is a link to <a
 href="http://www.eecis.udel.edu/~harvey/ValleyOverTheHill32R3C.pdf">The Valley
@@ -17,10 +17,10 @@ Over the Hill</a> 32R3C (taught by Terry Harvey)</p>
 	<p>Pictures from previous years are in this slideshow:
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 width="700" height="700" id="ssidx"><param name="movie"
-value="http://cdn.smugmug.com/ria/ShizamSlides-2009120303.swf?AlbumID=11002611&AlbumKey=H3Rm6&transparent=true&bgColor=&borderThickness=&borderColor=&useInside=&endPoint=&mainHost=cdn.smugmug.com&VersionNos=2009120303&width=600&height=600&clickToImage=true&captions=true&showThumbs=true&autoStart=true&showSpeed=true&pageStyle=black&showButtons=true&randomStart=false&randomize=true&splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&splashDelay=0&crossFadeSpeed=350"><param
+value="http://cdn.smugmug.com/ria/ShizamSlides-2009120303.swf?AlbumID=11002611&amp;AlbumKey=H3Rm6&amp;transparent=true&amp;bgColor=&amp;borderThickness=&amp;borderColor=&amp;useInside=&amp;endPoint=&amp;mainHost=cdn.smugmug.com&amp;VersionNos=2009120303&amp;width=600&amp;height=600&amp;clickToImage=true&amp;captions=true&amp;showThumbs=true&amp;autoStart=true&amp;showSpeed=true&amp;pageStyle=black&amp;showButtons=true&amp;randomStart=false&amp;randomize=true&amp;splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&amp;splashDelay=0&amp;crossFadeSpeed=350"><param
 name="wmode" value="transparent"><param name="allowNetworking"
 value="all"><param name="allowScriptAccess" value="always"><embed
-src="http://cdn.smugmug.com/ria/ShizamSlides-2009120303.swf?AlbumID=11002611&AlbumKey=H3Rm6&transparent=true&bgColor=&borderThickness=&borderColor=&useInside=&endPoint=&mainHost=cdn.smugmug.com&VersionNos=2009120303&width=600&height=600&clickToImage=true&captions=true&showThumbs=true&autoStart=true&showSpeed=true&pageStyle=black&showButtons=true&randomStart=false&randomize=true&splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&splashDelay=0&crossFadeSpeed=350"
+src="http://cdn.smugmug.com/ria/ShizamSlides-2009120303.swf?AlbumID=11002611&amp;AlbumKey=H3Rm6&amp;transparent=true&amp;bgColor=&amp;borderThickness=&amp;borderColor=&amp;useInside=&amp;endPoint=&amp;mainHost=cdn.smugmug.com&amp;VersionNos=2009120303&amp;width=600&amp;height=600&amp;clickToImage=true&amp;captions=true&amp;showThumbs=true&amp;autoStart=true&amp;showSpeed=true&amp;pageStyle=black&amp;showButtons=true&amp;randomStart=false&amp;randomize=true&amp;splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&amp;splashDelay=0&amp;crossFadeSpeed=350"
 width="600" height="600" wmode="transparent"
 type="application/x-shockwave-flash" allowScriptAccess="always"
 allowNetworking="all"  ></embed></object>
