Fix the name of the dance title.

--- a/ball.html.in
+++ b/ball.html.in
@@ -2,8 +2,8 @@
 
 	<p>Youth Weekend West participants are invited to join the RSCDS
 Southwest Washington State Branch's annual dinner dance.  Taking place on
-Saturday, May 4th at St. Luke's Episcopal Church, this year's theme is "Dancing
-with the Stars."  There will be a catered dinner at 6:00pm and the Grand March
+Saturday, May 4th at St. Luke's Episcopal Church, this year's theme is "Dance
+Among the Stars."  There will be a catered dinner at 6:00pm and the Grand March
 will be at 7:15pm.</p>
 
 	<h2>Musicians:</h2>
