Update the new schedule details.

--- a/schedule.html.in
+++ b/schedule.html.in
@@ -1,76 +1,57 @@
 	<h1>Schedule of Events</h1>
 
-	<p><b>Tentative Schedule:</b> There will be a ceildh on Friday night,
-classes during the day on Saturday, a ball Saturday evening, and a final class
-on Sunday.  Please check back for more details as Youth Weekend West comes
-closer.</p>
-<!--
-	<img src="images/bow.png" width="400" height="293" alt="Bow and curtsy" class="floatright">
-
 	<p>Youth Weekend West presents a variegated and entertaining schedule
 of events for the weekend, including Scottish Country dancing classes at three
 levels, elective dance classes for the adventurous, a Ceilidh on Friday night,
 and a Ball on Saturday, to which Scottish Country Dancers of all ages are
 invited.</p>
 
-	<h2>Friday, May 4, 2012</h2>
+	<h2>Friday, May 3rd, 2013</h2>
 	<table>
-	<tr><td width="150">7:30 pm - 10:30 pm</td>
-	<td><a href="ceilidh.html">Ceilidh</a></td>
-	</tr>
-	</table>
-
-	<br>
-	<h2>Saturday, May 5, 2012</h2>
-	<table>
-		<tr><td width="150">10:00 am - 11:15 pm</td>
-			<td><a href="classes.html">Classes</a> (beginning, intermediate, and advanced)</td>
-		</tr>
-		<tr><td width="150">11:25 am - 12:40 pm</td>
-			<td><a href="classes.html">Electives</a></td>
-		</tr>
-		<tr><td>12:40 pm - 1:30 pm</td>
-			<td>Lunch (provided)</td>
-		</tr>
 		<tr>
-			<td>1:30 pm - 2:45 pm</td>
-			<td>Classes (beginning, intermediate, and advanced)</td>
-		</tr>
-		<tr>
-			<td>2:55 pm - 4:10 pm</td>
-			<td>Elective or ball walk-through</td>
-		</tr>
-		<tr>
-			<td>7:00 pm - 7:30 pm</td>
-			<td>Hors d'oeuvres at the Washington Dance Club</td>
-		</tr>
-		<tr>
-			<td>7:30 pm - 11:30 pm</td>
-			<td><a href="ballprg.html">Ball at the Washington Dance Club</a> (open to all)</td>
+			<td>7:00 pm - 10:00 pm</td>
+			<td>Welcome Ceildh at the Academy Building</td>
 		</tr>
 	</table>
 
 	<br>
-	<h2>Sunday, May 6, 2012</h2>
+	<h2>Saturday, May 4th, 2013</h2>
 	<table>
-		<tr><td width="150">10:00 am - 12:00 pm</td>
-		<td>Combined class</td>
+		<tr>
+			<td>9:30am - 10:30am</td>
+			<td><a href="classes.html">Classes</a> (part I, Academy building or St. Luke's)</td>
 		</tr>
-		<tr><td width="150">12:00 am - 12:30 pm</td>
-			<td>Lunch (provided)</td>
+		<tr>
+			<td>10:45am - 11:45am</td>
+			<td><a href="classes.html">Classes</a> (part II, Academy building or St. Luke's)</td>
+		</tr>
+		<tr>
+			<td>12:00pm - 1:00pm</td>
+			<td>Lunch at St. Luke's</td>
+		</tr>
+		<tr>
+			<td>1:15pm - 2:15pm</td>
+			<td>Elective (Zombie or Norman dance, St. Luke's or the Columbia Dance Center)
+		</tr>
+		<tr>
+			<td>2:30pm - 3:30pm</td>
+			<td>Ball walk-through at St. Luke's, or a scavenger hunt</td>
+		</tr>
+		<tr>
+			<td>6:00pm - 7:00pm</td>
+			<td>Dinner at St. Luke's</td>
+		</tr>
+		<tr>
+			<td>7:15pm - 11:30pm</td>
+			<td><a href="ball.html">Ball at the St. Luke's</a> (open to all)</td>
 		</tr>
 	</table>
 
-	<h2>Class Level Descriptions</h2>
-	<p><strong>Beginner:</strong> For dancers with a year or less or no
-Scottish Country Dance experience.</p>
-
-	<p><strong>Intermediate:</strong> Dancers are comfortable with basic
-formations (e.g., hands across, reels of three or four, allemande) and some
-intermediate and advanced formations (e.g., poussettes, double triangles,
-knot). Can dance a new dance after one or two walk-throughs.</p>
-
-	<p><strong>Advanced:</strong> Dancers are comfortable with most
-advanced formations and show excellent phrasing, handing, and covering. Can do
-a new dance with only a talk-through.</p>
--->
+	<br>
+	<h2>Sunday, May 5th, 2013</h2>
+	<table>
+		<tr>
+			<td>9:30am - 11:30am</td>
+			<td>Combined class, Columbia Dance Center</td>
+		</tr>
+	</table>
