classes: Update this page with the schedule info.

--- a/classes.html.in
+++ b/classes.html.in
@@ -1,7 +1,7 @@
 	<h1>Classes</h1>
 
-	<p>Please check back later for more information about the classes that
-we will offer for Youth Weekend West.</p>
+	<p>For 2013, classes will be split between the Academy Building (C) and
+St. Luke's Church (A).</p>
 
 	<h2>Locations:</h2>
 	<p>This year's Youth Weekend West classes will be held in three venues:
@@ -13,24 +13,6 @@ we will offer for Youth Weekend West.</p>
 	<li>The Leslie B. Durst Columbia Dance Center, 1700 Broadway, Vancouver, Wash.</li>
 	<li>The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash.</li>
 	</ol>
-
-<!--
-
-	<img src="images/center_house.jpg" width="250" height="231" alt="Seattle Center House" class="floatright">
-	<p>Classes and electives will be held in the Theatre Puget Sound rehearsal rooms on the fourth floor of the Seattle Center House. </p>
-
-	<h2>Location</h2>
-	<p><a href="http://www.seattlecenter.com/locations/detail.aspx?id=39" target="new">Seattle Center House</a><br>
-	305 Harrison Street<br>
-	Seattle, WA 98109</p>
-
-	<h2>Class Level Descriptions</h2>
-	<p><strong>Beginner:</strong> For dancers with a year or less or no Scottish Country Dance experience.</p>
-
-	<p><strong>Intermediate:</strong> Dancers are comfortable with basic formations (e.g., hands across, reels of three or four, allemande) and some intermediate and advanced formations (e.g., poussettes, double triangles, knot). Can dance a new dance after one or two walk-throughs.</p>
-
-	<p><strong>Advanced:</strong> Dancers are comfortable with most advanced formations and show excellent phrasing, handing, and covering. Can do a new dance with only a talk-through.</p>
--->
 
 	<h2>Electives</h2>
 	<p>There will be two elective classes that you can choose from:</p>
