Post the latest site news.

--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,7 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>20 Feb 2013:</b> The schedule has been posted.</p>
+
 	<p><b>29 Jan 2013:</b> The ball program has been created, teachers and
 musicians have been selected, venues have been found, and a rudimentary
 schedule have appeared on the website!</p>
