Move the maps to the schedule page.

--- a/classes.html.in
+++ b/classes.html.in
@@ -1,18 +1,9 @@
 	<h1>Classes</h1>
 
-	<p>For 2013, classes will be split between the Academy Building (C) and
-St. Luke's Church (A).</p>
-
-	<h2>Locations:</h2>
-	<p>This year's Youth Weekend West classes will be held in three venues:
-<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m&amp;output=embed"></iframe><![endif]-->
-<br /><small><a href="https://maps.google.com/maps?f=d&amp;source=embed&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
-
-	<ol style="list-style-type: upper-alpha;">
-	<li>St. Luke's Episcopal Church, 426 E. Fourth Plain Blvd., Vancouver, Wash.</li>
-	<li>The Leslie B. Durst Columbia Dance Center, 1700 Broadway, Vancouver, Wash.</li>
-	<li>The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash.</li>
-	</ol>
+	<p>For 2013, classes will be split between the Academy Building and
+St. Luke's Church, which are locations (C) and (A) on the <a
+href="schedule.html">Schedule</a>.  Both classes will cover the same content
+and have the same teachers.</p>
 
 	<h2>Electives</h2>
 	<p>There will be two elective classes that you can choose from:</p>
