classes: Straighten out some of the wording.

--- a/classes.html.in
+++ b/classes.html.in
@@ -1,9 +1,12 @@
 	<h1>Classes</h1>
 
-	<p>For 2013, classes will be split between the Academy Building and
-St. Luke's Church, which are locations (C) and (A) on the <a
+	<p>For 2013, Saturday's classes will be split between the Academy
+Building and St. Luke's Church, which are locations (C) and (A) on the <a
 href="schedule.html">Schedule</a>.  Both classes will cover the same content
 and have the same teachers.</p>
+
+	<p>On Sunday, there will be a combined class at the Columbia Dance
+Center (location (B)).</p>
 
 	<h2>Electives</h2>
 	<p>There will be two elective classes that you can choose from:</p>
