--- a/schedule.html.in
+++ b/schedule.html.in
@@ -10,7 +10,7 @@ invited, and a combined class on Sunday morning.</p>
 	<table>
 		<tr>
 			<td style="padding-right: 2em;">7:00 pm - 10:00 pm</td>
-			<td>Welcome Ceildh at the Academy Building (C)</td>
+			<td>Welcome Ceildh and check-in at the Academy Building (C)</td>
 		</tr>
 	</table>
 
@@ -31,7 +31,7 @@ invited, and a combined class on Sunday morning.</p>
 		</tr>
 		<tr>
 			<td>1:15pm - 2:15pm</td>
-			<td>Elective (Zombie or Norman dance, St. Luke's or the Columbia Dance Center (B))
+			<td>Electives: Zombie dance at the Columbia Dance Center (B) or Norman dance at St. Luke's</td>
 		</tr>
 		<tr>
 			<td>2:30pm - 3:30pm</td>
@@ -43,7 +43,7 @@ invited, and a combined class on Sunday morning.</p>
 		</tr>
 		<tr>
 			<td>7:15pm - 11:30pm</td>
-			<td><a href="ball.html">Ball at the St. Luke's</a> (open to all)</td>
+			<td><a href="ball.html">Ball at St. Luke's</a> (open to all).  Grand march is at 7:15.</td>
 		</tr>
 	</table>
 
@@ -56,13 +56,15 @@ invited, and a combined class on Sunday morning.</p>
 		</tr>
 	</table>
 
-	<h2>Locations:</h2>
-	<p>This year's Youth Weekend West classes will be held in three venues:
-<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m&amp;output=embed"></iframe><![endif]-->
-<br /><small><a href="https://maps.google.com/maps?f=d&amp;source=embed&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFXFTuAIdIjKw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q&amp;aq=&amp;sll=45.634416,-122.668877&amp;sspn=0.016684,0.035019&amp;dirflg=w&amp;mra=ls&amp;ie=UTF8&amp;ll=45.634416,-122.668877&amp;spn=0.01144,0.00335&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
+	<h2>Locations</h2>
+	<p>This year's Youth Weekend West classes will be held in three venues,
+(A), (B), and (C).  The hotel is located at marker (D).
+<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFUlTuAIdQjGw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q%3BFX5EuAIdmj2w-CEAQfk6D8hv2SlD36eHs6iVVDEAQfk6D8hv2Q&amp;q=from:St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA+to:Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:+Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;aq=&amp;sll=45.634446,-122.668877&amp;sspn=0.021336,0.036092&amp;dirflg=w&amp;ie=UTF8&amp;t=m&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;ll=45.634437,-122.668888&amp;spn=0.011439,0.003348&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFUlTuAIdQjGw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q%3BFX5EuAIdmj2w-CEAQfk6D8hv2SlD36eHs6iVVDEAQfk6D8hv2Q&amp;q=from:St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA+to:Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:+Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;aq=&amp;sll=45.634446,-122.668877&amp;sspn=0.021336,0.036092&amp;dirflg=w&amp;ie=UTF8&amp;t=m&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;ll=45.634437,-122.668888&amp;spn=0.011439,0.003348&amp;output=embed"></iframe><![endif]-->
+<br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=FRhquAIdND-w-CEMxIABnUnvUinXfAYQNK-VVDEMxIABnUnvUg%3BFUlTuAIdQjGw-CGinmSHaxtP-ymHObh6taiVVDGinmSHaxtP-w%3BFTNAuAIdQjuw-CFmA16DDUvr0Sm3AP7rs6iVVDFmA16DDUvr0Q%3BFX5EuAIdmj2w-CEAQfk6D8hv2SlD36eHs6iVVDEAQfk6D8hv2Q&amp;q=from:St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA+to:Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:+Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;aq=&amp;sll=45.634446,-122.668877&amp;sspn=0.021336,0.036092&amp;dirflg=w&amp;ie=UTF8&amp;t=m&amp;saddr=St.+Luke's+Episcopal+Church,+East+4th+Plain+Boulevard,+Vancouver,+WA&amp;daddr=Columbia+Dance,+Broadway+Street,+Vancouver,+WA+to:The+Academy,+East+Evergreen+Boulevard,+Vancouver,+WA+to:Comfort+Inn,+401+E+13th+St,+Vancouver,+WA&amp;ll=45.634437,-122.668888&amp;spn=0.011439,0.003348" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
 
 	<ol style="list-style-type: upper-alpha;">
 	<li>St. Luke's Episcopal Church, 426 E. Fourth Plain Blvd., Vancouver, Wash.</li>
 	<li>The Leslie B. Durst Columbia Dance Center, 1700 Broadway, Vancouver, Wash.</li>
 	<li>The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash.</li>
+	<li>Comfort Inn Vancouver, 401 E. 13th Street, Vancouver, Wash.</li>
 	</ol>
