Minor tweaks to the schedule.

--- a/schedule.html.in
+++ b/schedule.html.in
@@ -10,7 +10,7 @@ invited, and a combined class on Sunday morning.</p>
 	<table>
 		<tr>
 			<td style="padding-right: 2em;">7:00 pm - 10:00 pm</td>
-			<td>Welcome Ceildh and check-in at the Academy Building (C)</td>
+			<td>Welcome Ceildh and check-in at the Academy Building</td>
 		</tr>
 	</table>
 
@@ -18,8 +18,12 @@ invited, and a combined class on Sunday morning.</p>
 	<h2>Saturday, May 4th, 2013</h2>
 	<table>
 		<tr>
+			<td>9:00am - 9:30am</td>
+			<td>Late check-in at St. Luke's.</td>
+		</tr>
+		<tr>
 			<td>9:30am - 10:30am</td>
-			<td><a href="classes.html">Classes</a> (part I, Academy Building (C) or St. Luke's (A))</td>
+			<td><a href="classes.html">Classes</a> (part I, Academy Building or St. Luke's)</td>
 		</tr>
 		<tr>
 			<td style="padding-right: 2em;">10:45am - 11:45am</td>
@@ -31,7 +35,7 @@ invited, and a combined class on Sunday morning.</p>
 		</tr>
 		<tr>
 			<td>1:15pm - 2:15pm</td>
-			<td>Electives: Zombie dance at the Columbia Dance Center (B) or Norman dance at St. Luke's</td>
+			<td>Electives: Zombie dance at the Columbia Dance Center or Norman dance at St. Luke's</td>
 		</tr>
 		<tr>
 			<td>2:30pm - 3:30pm</td>
