--- a/register_test.html.in
+++ b/register_test.html.in
@@ -100,7 +100,7 @@ function change_package(num) {
 <div dir="ltr" class="ss-item  ss-section-header"><div class="ss-form-entry"><h2 class="ss-section-title">Package Levels</h2>
 <div class="ss-section-description ss-no-ignore-whitespace">We offer two packages: a full package, which includes all dancing activities and a hotel reservation; and a commuter package, which does not include the hotel.  Full packages are $100 USD, and commuter packages are $75 USD.  A limited amount of home hosting is available at the commuter price.  Please contact <a href="mailto:yww2013@yahoo.com">yww2013@yahoo.com</a> directly for details.
 
-After April 1, those prices go up to $110 USD and $90 USD, respectively.  We _cannot_ guarantee a hotel reservation after April 1st.
+After April 1, those prices go up to $110 USD and $90 USD, respectively.  We <i>cannot</i> guarantee a hotel reservation after April 1st.
 
 If writing a check or a money order, please make it out to "RSCDS, Southwest Washington State Branch" and send it to:
 YWW 2013
@@ -126,16 +126,16 @@ You may also pay via PayPal.</div>
 <div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_62760471"><div class="ss-q-title">How will you pay us?
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk">*</span></div>
-<div class="ss-q-help" dir="ltr">If using PayPal, select a package above, click the "Add to Cart" button, and complete your PayPal transaction before returning to this form.</div></label>
-<ul class="ss-choices"><li class="ss-choice-item"><label><input name="entry.2066431272" value="I will pay via check or money order." id="group_2066431272_1" class="ss-q-radio" aria-label="I will pay via check or money order." type="radio">
-<label class="ss-choice-label" for="group_2066431272_1">I will pay via check or money order.</label></label></li> <li class="ss-choice-item"><label><input name="entry.2066431272" value="I will pay via PayPal." id="group_2066431272_2" class="ss-q-radio" aria-label="I will pay via PayPal." type="radio">
-<label class="ss-choice-label" for="group_2066431272_2">I will pay via PayPal.</label></label>
+<div class="ss-q-help" dir="ltr">If using PayPal, select a package above, click the &quot;Add to Cart&quot; button, and complete your PayPal transaction before returning to this form.</div></label>
+<ul class="ss-choices"><li class="ss-choice-item"><label><input type="radio" name="entry.2066431272" value="Check or money order." id="group_2066431272_1" class="ss-q-radio" aria-label="Check or money order.">
+<label class="ss-choice-label" for="group_2066431272_1">Check or money order.</label></label></li> <li class="ss-choice-item"><label><input type="radio" name="entry.2066431272" value="PayPal." id="group_2066431272_2" class="ss-q-radio" aria-label="PayPal.">
+<label class="ss-choice-label" for="group_2066431272_2">PayPal.</label></label>
 
 <!-- djwong added paypal stuff here -->
 <span style="margin-left: 2em;"><a href="javascript:add_package();"><img style="vertical-align: text-bottom;" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" alt="Add Package to Cart"></img></a> <a href="javascript:view_cart();"><img style="vertical-align: text-bottom;" src="https://www.paypalobjects.com/en_US/i/btn/btn_viewcart_LG.gif" alt="View Cart"></img></a></span>
 <!-- end djwong added paypal stuff here -->
 
-</li></ul></div></div></div><div class="errorbox-good">
+</li></ul></div></div></div> <div class="errorbox-good">
 <div dir="ltr" class="ss-item  ss-text"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_560824854"><div class="ss-q-title">PayPal information
 </div>
 <div class="ss-q-help" dir="ltr">To expedite your confirmation if you're paying with PayPal, please enter one of: (a) the transaction ID they gave you, (b) your PayPal user id, or (c) the email address you supplied to PayPal.</div></label>
