--- a/schedule.html.in
+++ b/schedule.html.in
@@ -1,7 +1,7 @@
 	<h1>Schedule of Events</h1>
 
-	<p>Youth Weekend West presents a variegated and entertaining schedule
-of events for the weekend, including Scottish Country dancing classes, elective
+	<p>Youth Weekend West presents a varied and entertaining schedule of
+events for the weekend, including Scottish Country dancing classes, elective
 dance classes for the adventurous, a Ceilidh on Friday night, a "Dancing Among
 the Stars" Ball on Saturday to which Scottish Country Dancers of all ages are
 invited, and a combined class on Sunday morning.</p>
